--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ body {
 .projects__title-container {
   width: 100%;
   text-align: center;
+  margin-bottom: 2rem;
 }
 .projects__card {
   text-align: center;
@@ -229,7 +230,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
 }
 .projects__card-title {
